--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
 
 <body>
     <header>
-        <h1 id="header-title">BoxBox</h1>
+        <a href="/"><h1 id="header-title">BoxBox</h1></a>
         <ul id="navigation">
             {% if logged_in %}
                 <li>Hello, {{ username }}</li>
