--- a/app/templates/drivers.html
+++ b/app/templates/drivers.html
@@ -2,14 +2,18 @@
 
 {% block content %}
 
-<h1>{{ league.strLeague }} Teams</h1>
+<h1>{{ drivers["player"][0]["strTeam"] }} Drivers</h1>
 
-<div class="drivers-container>">
-    {% for driver in drivers %}
-    <div class="drivers-item">
-        <img src="{{ driver.strThumb }}">
-        <p>{{ driver.strPlayer }}</p>
-    </div>
+<div class="drivers-container">
+    {% for driver in drivers["player"] %}
+        {% if driver["strPosition"] == "Manager" %}
+            <!-- Do nothing -->
+        {% else %}
+            <div class="drivers-item">
+                <img src="{{ driver.strThumb }}">
+                <p>{{ driver.strPlayer }}</p>
+            </div>
+        {% endif %}
     {% endfor %}
 </div>
 
