--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,12 +5,11 @@
 <h1>Articles</h1>
 <hr>
 <div class="articles-container">
-    {% for league in leagueIds %}
+    {% for article in articles %}
 
-        <div class="league-item">
-            <a href="/league?l={{ leagues[league].idLeague }}">
-                <img src="{{ leagues[league].strLogo }}">
-                <p>Article</p>
+        <div class="article-item">
+            <a href="article/{{ article.name }}">
+                <p>{{ article.title }}</p>
             </a>
         </div>
         
@@ -18,6 +17,7 @@
 </div>
 
 <h1>Leagues</h1>
+
 <hr>
 <div class="league-container">
 {% for league in leagueIds %}
