--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,6 +10,13 @@
     <button type="submit" class="btn" name="button" value="login">
         Log In
     </button>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 </form>
 
 {% endblock %}
