--- a/app/static/style.css
+++ b/app/static/style.css
@@ -54,6 +54,7 @@ p {
     display: grid;
     grid-template-columns: auto auto auto;
     background-color: dodgerblue;
+    border-radius: 10px;
     padding: 1%;
     margin: 5%;
 }
@@ -80,16 +81,26 @@ p {
 
 .articles-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
     background-color: dodgerblue;
+    border-radius: 10px;
     padding: 1%;
     margin: 5%;
+}
+
+.article-item {
+    text-align: center;
+    padding: 1%;
+    margin: 0.5%;
+    background-color: whitesmoke;
+    border: 1px solid black;
 }
 
 .teams-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: dodgerblue;
+    border-radius: 10px;
     padding: 1%;
     margin: 5;
 }
