Tidied up CSS files

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -79,7 +79,7 @@ footer p {
 
 .content {
     width: 75%;
-    min-height: calc(100vh - 8vh - 6vh);
+    min-height: calc(100vh - 8vh - 6vh); /* 100 - header height - footer height */
     margin: auto;
     background-color: white;
 }
@@ -94,195 +94,5 @@ footer p {
 }
 
 .content p {
-    font-family: 'Roboto-Regular';
-}
-
-.articles-container {
-    display: grid;
-    grid-template-rows: auto auto auto;
-    background-color: dodgerblue;
-    border-radius: 10px;
-    padding: 1%;
-    margin: 5%;
-}
-
-.articles-container a {
-    text-decoration: none;
-}
-
-.article-item {
-    text-align: center;
-    padding: 1%;
-    margin: 0.5%;
-    background-color: #202020;
-    border-radius: 15px;
-}
-
-.article-item p {
-    font-family: 'Nexa-Light';
-    color: white;
-    font-size: 2rem;
-}
-
-.article-item:hover {
-    background-color: lightslategray;
-}
-
-.league-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: dodgerblue;
-    border-radius: 10px;
-    padding: 1%;
-    margin: 5%;
-}
-
-.league-container a {
-    text-decoration: none;
-}
-
-.league-item {
-    background-color: #202020;
-    border-radius: 15px;
-    padding: 10%;
-    margin: 2.5%;
-    text-align: center;
-}
-
-.league-item:hover {
-    background-color: lightslategray;
-}
-
-.league-item img {
-    width: 200px;
-}
-
-.league-item p {
-    color: white;
-    font-family: 'Nexa-Light';
-    font-size: 2rem;
-}
-
-.league-banner {
-    width: 100%;
-}
-
-.league-description {
-    padding-top: 2%;
-}
-
-.league-next-event {
-    padding-top: 2%;
-}
-
-.teams-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background-color: dodgerblue;
-    border-radius: 10px;
-    padding: 1%;
-    margin: 5;
-}
-
-.team-item {
-    background-color: grey;
-    border: 1px solid white;
-    padding: 1%;
-    margin: 5%;
-    border-radius: 5em;
-    text-align: center;
-}
-
-.team-item img {
-    width: 50%;
-    padding: 2%;
-    border-radius: 2em;
-}
-
-.team-item p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1em;
-}
-
-.drivers-container{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: dodgerblue;
-    padding: 1%;
-    margin: 5;
-}
-
-.drivers-item {
-    background-color: whitesmoke;
-    border: 1px solid black;
-    padding: 1%;
-    height: 100%;
-    text-align: center;
-}
-
-.drivers-item img {
-    border-radius: 50%;
-    width: 50%;
-}
-
-.drivers-item p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1em;
-}
-
-.form_container {
-    margin: auto;
-    width: 50%;
-    text-align: center;
-}
-
-input[type=username], input[type=email], input[type=password], textarea {
-    display: inline-block;
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 1px solid dodgerblue;
-    padding: 2%;
-    width: 100%;
-    font-family: 'Roboto-Regular';
-    font-size: 1.25rem;
-}
-
-input:focus {
-    border: 1px solid dodgerblue;
-}
-
-input[type=submit] {
-    font-family: 'Nexa-Heavy';
-    font-size: 1.25rem;
-    margin: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    width: 30%;
-    color: white;
-    background-color: #1e90ff;
-    border: none;
-}
-
-input[type=submit]:hover {
-    background-color: #6bb4fa;
-}
-
-.comments-container {
-    margin-top: 2.5%;
-}
-
-.comment-submission {
-    margin-top: 2.5%;
-}
-
-.comment {
-    margin-top: 1%;
-}
-
-.comment h3 {
-    font-family: 'Nexa-Heavy';
-}
-
-.comment p {
     font-family: 'Roboto-Regular';
 }
