--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block stylesheet %}
+<link rel="stylesheet" href="{{ url_for('static', filename='comments.css') }}">
+{% endblock %}
+
 {% block content %}
 
 {{ article | safe }}
