--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,7 @@
 
 <title>{{title}} | BoxBox</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+{% block stylesheet %} {% endblock %}
 
 <body>
     <header>
