--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block stylesheet %}
+<link rel="stylesheet" href="{{ url_for('static', filename='accountForm.css') }}">
+{% endblock %}
+
 {% block content %}
 
 <h1>Register</h1>
