--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block stylesheet %}
+<link rel="stylesheet" href="{{ url_for('static', filename='teams.css') }}">
+{% endblock %}
+
 {% block content %}
 
 <h1>{{ league.strLeague }} Teams</h1>
