--- a/app/static/accountForm.css
+++ b/app/static/accountForm.css
@@ -4,7 +4,7 @@
     text-align: center;
 }
 
-input[type=username], input[type=email], input[type=password], textarea {
+input[type=username], input[type=email], input[type=password] {
     display: inline-block;
     box-sizing: border-box;
     border: none;
