--- a/app/static/teams.css
+++ b/app/static/teams.css
@@ -2,18 +2,17 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: dodgerblue;
-    border-radius: 10px;
+    border-radius: 30px;
     padding: 1%;
-    margin: 5;
+    margin: 2% 0 2% 0;
 }
 
 .team-item {
-    background-color: grey;
-    border: 1px solid white;
-    padding: 1%;
-    margin: 5%;
-    border-radius: 5em;
     text-align: center;
+    padding: 1%;
+    margin: 1%;
+    background-color: #202020;
+    border-radius: 15px;
 }
 
 .team-item img {
@@ -23,6 +22,16 @@
 }
 
 .team-item p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1em;
+    font-family: 'Nexa-Light';
+    color: white;
+    font-size: 1.2rem;
+    text-decoration: none;
+}
+
+.teams-container a {
+    text-decoration: none;
+}
+
+.team-item:hover {
+    background-color: lightslategray;
 }
