--- a/app/templates/league.html
+++ b/app/templates/league.html
@@ -2,6 +2,7 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href="{{ url_for('static', filename='league.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='teams.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -24,8 +25,18 @@
     {% endif %}
 </div>
 
-<div class="league-teams">
-    <a href="/league/teams?l={{ league.idLeague }}"><h1>Teams</h1></a>
+<h1>{{ league.strLeague }} Competitors</h1>
+<hr>
+
+<div class="teams-container">
+    {% for team in teams.teams %}
+    <a href="team?t={{ team.idTeam }}">
+        <div class="team-item">
+            <img src="{{ team.strLogo }}">
+            <p>{{ team.strTeam }}</p>
+        </div>
+    </a>
+    {% endfor %}
 </div>
 
 {% endblock %}
