--- a/app/static/team.css
+++ b/app/static/team.css
@@ -1,25 +1,37 @@
 .drivers-container{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr;
     background-color: dodgerblue;
+    border-radius: 30px;
     padding: 1%;
-    margin: 5;
+    margin: 2% 0 2% 0;
 }
 
 .drivers-item {
-    background-color: whitesmoke;
-    border: 1px solid black;
-    padding: 1%;
-    height: 100%;
     text-align: center;
+    padding: 1%;
+    margin: 1%;
+    background-color: #202020;
+    border-radius: 15px;
 }
 
 .drivers-item img {
-    border-radius: 50%;
-    width: 50%;
+    width: 30%;
+    padding: 2%;
+    border-radius: 2em;
 }
 
 .drivers-item p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1em;
+    font-family: 'Nexa-Light';
+    color: white;
+    font-size: 1.2rem;
+    text-decoration: none;
+}
+
+.drivers-container a {
+    text-decoration: none;
+}
+
+.drivers-item:hover {
+    background-color: lightslategray;
 }
