--- a/app/templates/league.html
+++ b/app/templates/league.html
@@ -3,6 +3,7 @@
 {% block stylesheet %}
 <link rel="stylesheet" href="{{ url_for('static', filename='league.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='teams.css') }}">
+<script src="{{ url_for('static', filename='eventTimer.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -11,15 +12,45 @@
     <img class="league-banner" src="{{ league.strBanner }}">
     <h1>{{ league.strLeague }}</h1>
     <hr>
-    <p class="league-description"">{{ league.strDescriptionEN }}</p>
+    <p class="league-description">{{ league.strDescriptionEN }}</p>
 </div>
 
 <div class="league-next-event">
-    {% if nextEvent %}
+    {% if nextEvent[0] %}
+    <script>
+        // Set the date we're counting down to
+        var countDownDate = new Date("{{ nextEvent[0].strTimestamp }}").getTime();
+
+        // Update the count down every 1 second
+        var x = setInterval(function() {
+
+        // Get today's date and time
+        var now = new Date().getTime();
+
+        // Find the distance between now and the count down date
+        var distance = countDownDate - now;
+
+        // Time calculations for days, hours, minutes and seconds
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        // Display the result in the element with id="demo"
+        document.getElementById("timestamp").innerHTML = days + "d " + hours + "h "
+        + minutes + "m " + seconds + "s ";
+
+        // If the count down is finished, write some text
+        if (distance < 0) {
+            clearInterval(x);
+            document.getElementById("timestamp").innerHTML = "EXPIRED";
+        }
+        }, 1000);
+    </script>
         <h1>Upcoming Race</h1>
-        <h2>{{ nextEvent.strEvent }}</h2>
-        <p>{{ nextEvent.strCountry }}</p>
-        <p>{{ nextEvent.strTimestamp }}</p>
+        <h2>{{ nextEvent[0].strEvent }}</h2>
+        <p>{{ nextEvent[0].strCountry }}</p>
+        <p id="timestamp"></p>
     {% else %}
         <h1>This season has concluded.</h1>
     {% endif %}
