--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -6,10 +6,15 @@
 
 {% block content %}
 
-<h1>{{ team["player"][0]["strTeam"] }}</h1>
+<h1>{{ team["teams"][0]["strTeam"] }}</h1>
+<h2>{{ team["teams"][0]["strLocation"] }}</h2>
+<p>{{ team["teams"][0]["strDescriptionEN"] }}</p>
 
-<div class="drivers-container">
-    {% for driver in team["player"] %}
+<h1>{{ team["teams"][0]["strTeam"] }} Drivers</h1>
+<hr>
+
+<div class="drivers-container" style="background-color: {{ team['teams'][0]['strColour1'] }}">
+    {% for driver in drivers["player"] %}
         {% if driver["strPosition"] == "Manager" %}
             <!-- Do nothing -->
         {% else %}
