--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
         <ul id="navigation">
             {% if logged_in %}
                 <li><a href="/logout">Log Out</a></li>
-                <li>Hello, {{ username }}!</li>
+                <li><a href="/account?user={{ username }}">Hello, {{ username }}!</a></li>
             {% else %}
                 <li><a href="/register">Register</a></li>
                 <li><a href="/login">Log In</a></li>
